creacion de propiedades de reportes por codigo

--- a/app/views/report/dailyReport.html
+++ b/app/views/report/dailyReport.html
@@ -13,8 +13,7 @@
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
 				</div>
-				<table id="daily" data-toggle="table" data-show-columns="true" data-toolbar="#toolbar" data-unique-id="Id" data-pagination="true"
-					data-search="true" data-show-export="true" data-page-list="[10, 50, 100, 200, TODO]">
+				<table id="daily">
 					<tfoot>
 						<tr>
 							<td colspan="5"> Total: </td>
