--- a/app/views/report/grill/secondGrillIssues.html
+++ b/app/views/report/grill/secondGrillIssues.html
@@ -10,8 +10,7 @@
                                 <span class="glyphicon glyphicon-share"></span> Copiar Reporte
                             </button>
 				</div>
-				<table id="grillIssuestTable">
-				</table>
+				<table id="grillIssuestTable"></table>
 			</div>
 		</div>
 	</div>
