--- a/app/views/report/genericReport.html
+++ b/app/views/report/genericReport.html
@@ -13,9 +13,7 @@
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
 				</div>
-				<table id="genericReport" data-toggle="table" data-show-columns="true" data-toolbar="#toolbar" data-unique-id="Id" data-pagination="true"
-					data-search="true" data-show-export="true" data-page-list="[10, 50, 100, 200, TODO]">
-				</table>
+				<table id="genericReport"></table>
 			</div>
 		</div>
 	</div>
