--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -31,9 +31,7 @@
                     <span class="glyphicon glyphicon-share"></span> Copiar Reporte
             </button>
 				</div>
-				<table id="producerReportTable" data-toggle="table" data-show-columns="true" data-toolbar="#toolbar" data-unique-id="Id"
-					data-pagination="true" data-search="true" data-show-export="true" data-page-list="[10, 50, 100, 200, TODO]">
-				</table>
+				<table id="producerReportTable"></table>
 			</div>
 		</div>
 	</div>
