--- a/app/views/grill/grillIssue.html
+++ b/app/views/grill/grillIssue.html
@@ -72,65 +72,9 @@
                             </div>
                         </form>
                         <div class="collapse m-t-10" id="collapseExample">
-                            <div class="row">
-                                <div class="col-sm-12 actionbar">
-                                    <div class="form-group">
-                                        <div class="col-sm-12">
-                                            <div class="fg-line">
-                                                <input type="text" class="form-control input-sm" id="isearch" placeholder="buscar...." data-ng-model="searchUser">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="card-body card-padding">
                                 <div class="table-responsive">
-                                    <table class="table table-striped table-bordered table-condensed table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th>No. de Parrilla</th>
-                                                <th>Fecha de Captura</th>
-                                                <th>Recepciones</th>
-                                                <th>Tamaño</th>
-                                                <th>Sacos</th>
-                                                <th>Kilos</th>
-                                                <th>Calidad</th>
-                                                <th>Variedad</th>
-                                                <th>Productor</th>
-                                                <th>Huerta/Lote</th>
-                                                <th>Peso de la Muestra</th>
-                                                <th>Humedad</th>
-                                                <th>No.Nueces por Kilo</th>
-                                                <th>Rendimiento</th>
-                                                <th>Total</th>
-                                                <th>Agregar</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr ng-repeat="grill in grills | filter:searchUser">
-                                                <td>{{grill.Folio}}</td>
-                                                <td>{{grill.DateCapture | date: 'dd/MM/yyyy'}}</td>
-                                                <td>{{grill.Receptions}}</td>
-                                                <td>{{grill.Size}}</td>
-                                                <td>{{grill.Sacks}}</td>
-                                                <td>{{grill.Kilos}}</td>
-                                                <td>{{grill.Quality}}</td>
-                                                <td>{{grill.Variety}}</td>
-                                                <td>{{grill.Producer}}</td>
-                                                <td>{{grill.Batch}}</td>
-                                                <td>{{grill.SampleWeight}}</td>
-                                                <td>{{grill.HumidityPercent}}</td>
-                                                <td>{{grill.WalnutNumber}}</td>
-                                                <td>{{grill.Performance}}</td>
-                                                <td>{{grill.TotalWeightOfEdibleNuts}}</td>
-                                                <td>
-                                                    <div class="checkbox m-b-15">
-                                                        <label><input type="checkbox" ng-model="grill.Added"><i class="input-helper"></i></label>
-                                                    </div>
-                                                </td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
+                                    <table id="grillIssuestGrillTable"></table>
                                 </div>
                             </div>
                         </div>
@@ -150,59 +94,7 @@
                     </div>
                     <div class="card-body card-padding">
                         <div class="table-responsive">
-                            <table id="tableId" class="table table-striped table-bordered table-condensed table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>No. de Parrilla</th>
-                                        <th>Fecha de Captura</th>
-                                        <th>Folios</th>
-                                        <th>Tamaño</th>
-                                        <th>Sacos</th>
-                                        <th>Kilos</th>
-                                        <th>Calidad</th>
-                                        <th>Variedad</th>
-                                        <th>Productor</th>
-                                        <th>Huerta/Lote</th>
-                                        <th>Peso de la Muestra</th>
-                                        <th>% Humedad</th>
-                                        <th>No.Nueces por Kilo</th>
-                                        <th>Rendimiento</th>
-                                        <th>Peso total de nueces comestibles</th>
-                                        <th>Regresar a Inv.</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat-start="grillIssue in issues | filter: searchGrillIssues">
-                                        <td colspan="3"><b>Remision: </b>{{grillIssue.Remission}}</td>
-                                        <td colspan="4"><b>Fecha de Captura: </b>:{{grillIssue.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
-                                        <td colspan="3"><b>Camion: </b>{{grillIssue.Truck}}</td>
-                                        <td colspan="3"><b>Conductor: </b>{{grillIssue.Driver}}</td>
-                                        <td colspan="4"><b>Caja:</b>{{grillIssue.Box}}</td>
-                                    </tr>
-                                    <tr ng-repeat-end ng-repeat="grill in grillIssue.Grills">
-                                        <td>{{grill.Folio}}</td>
-                                        <td>{{grill.DateCapture | date: 'dd/MM/yyyy HH:mm'}}</td>
-                                        <td>{{grill.Receptions}}</td>
-                                        <td>{{grill.Size}}</td>
-                                        <td>{{grill.Sacks}}</td>
-                                        <td>{{grill.Kilos}}</td>
-                                        <td>{{grill.Quality}}</td>
-                                        <td>{{grill.Variety}}</td>
-                                        <td>{{grill.Producer}}</td>
-                                        <td>{{grill.Batch}}</td>
-                                        <td>{{grill.SampleWeight}}</td>
-                                        <td>{{grill.HumidityPercent}}</td>
-                                        <td>{{grill.WalnutNumber}}</td>
-                                        <td>{{grill.Performance}}</td>
-                                        <td>{{grill.TotalWeightOfEdibleNuts}}</td>
-                                        <td>
-                                            <button class="btn btn-default" ng-click="returnGrillToInventory(grill.Id, grillIssue.Id)" data-toggle="tooltip" data-placement="bottom"
-                                                title="Regresar parrilla a inventario"><i class="md md-reply"></i>
-                                            </button>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <table id="grillIssuestTable"></table>
                         </div>
                     </div>
                 </div>
