--- a/app/views/report/producerReport.html
+++ b/app/views/report/producerReport.html
@@ -6,7 +6,7 @@
 			</div>
 			<div class="card-body card-padding">
 				<div class="form-group">
-					<div class="col-sm-10">
+					<div class="col-md-6">
 						<div class="fg-line select">
 							<select id="prodF" class="form-control" ng-model="producer" ng-options="producer.ProducerName for producer in producers"
 								ng-change="getProducerReport(producer.Id)"></select>
